--- a/.drone.yml
+++ b/.drone.yml
@@ -4,7 +4,7 @@ workspace:
 
 pipeline:
   test:
-    image: golang:1.10.3-alpine
+    image: golang:1.10.3
     environment:
     secrets:
     commands:
