--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ pipeline:
     secrets:
     commands:
       - go get ./...
-      - go test ./...
+      - go test -v ./...
     when:
       event: [push, pull_request]
 
