--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -9,11 +9,11 @@ jobs:
 
     steps:
       - name: Checkout Codebase
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
 
       - uses: actions/setup-go@v1
         with:
-          go-version: '1.13'
+          go-version: '1.15'
 
       - name: Download Go Dependencies
         run: go mod download
